--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Black history month advent calendar, celebrating black history"
     />
     <link rel="apple-touch-icon" href="logo192.png" />
     <!--
@@ -28,7 +28,7 @@
       href="https://fonts.googleapis.com/css?family=Dancing+Script:700&display=swap"
       rel="stylesheet"
     />
-    <title>React App</title>
+    <title>Black History Month Advent Calendar</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
