adds service worker and modal

--- a/public/index.html
+++ b/public/index.html
@@ -25,10 +25,15 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <link
-      href="https://fonts.googleapis.com/css?family=Dancing+Script:700&display=swap"
+      href="style.css"
       rel="stylesheet"
     />
     <title>Black History Month Advent Calendar</title>
+    <style>
+body {background-color: powderblue;}
+h1   {color: blue;}
+p    {color: red;}
+</style>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
