--- a/public/index.html
+++ b/public/index.html
@@ -30,9 +30,7 @@
     />
     <title>Black History Month Advent Calendar</title>
     <style>
-body {background-color: powderblue;}
-h1   {color: blue;}
-p    {color: red;}
+body {background-color: #1e1e1d;}
 </style>
   </head>
   <body>
