--- a/public/index.html
+++ b/public/index.html
@@ -24,14 +24,13 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <link
-      href="style.css"
-      rel="stylesheet"
-    />
+    <link href="style.css" rel="stylesheet" />
     <title>Black History Month Advent Calendar</title>
     <style>
-body {background-color: #1e1e1d;}
-</style>
+      body {
+        background-color: #1e1e1d;
+      }
+    </style>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
